--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "lint-staged": "^12.1.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-hook-form": "^7.24.2",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-switch": "^6.0.0",
